[package]
name = "qsen-07-ble"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768"] }
esp-backtrace = { version = "0.17.0", features = [ "exception-handler", "panic-handler", "println" ] }
esp-hal = { version = "1.0.0-rc.0", features = [ "unstable" ] }
esp-hal-embassy = { version = "0.9.0" }
esp-alloc = { version = "0.8.0" }
esp-println = { version = "0.15.0", features = ["log-04"] }
esp-wifi = { version = "0.15.0", features = [ "ble" ] }
trouble-host = { version = "0.2.4", features = ["default-packet-pool-mtu-255", "scan"] }
bt-hci = "0.3.2"
embassy-futures = "0.1.1"
embassy-sync = "0.7.0"
embassy-time = "0.4.0"
#heapless = "0.8.0"
log = "0.4.27"
esp-bootloader-esp-idf = "0.2.0"
embassy-embedded-hal = "0.5.0"
embedded-hal = "1.0.0"
static_cell = "2.1.1"
esp-rom-sys = "0.1.1"
libm = "0.2.15"

aht20-driver = { version = "2", default-features = false }
bh1750 = "0.1.0"
bme280 = "0.5.1"
scd4x = "0.4.1"

[features]
default = ["esp32c6"]

esp32c2 = ["esp-hal/esp32c2", "esp-backtrace/esp32c2", "esp-hal-embassy/esp32c2", "esp-println/esp32c2", "esp-wifi/esp32c2", "esp-bootloader-esp-idf/esp32c2"]
esp32c3 = ["esp-hal/esp32c3", "esp-backtrace/esp32c3", "esp-hal-embassy/esp32c3", "esp-println/esp32c3", "esp-wifi/esp32c3", "esp-bootloader-esp-idf/esp32c3"]
esp32c6 = ["esp-hal/esp32c6", "esp-backtrace/esp32c6", "esp-hal-embassy/esp32c6", "esp-println/esp32c6", "esp-wifi/esp32c6", "esp-bootloader-esp-idf/esp32c6"]
esp32h2 = ["esp-hal/esp32h2", "esp-backtrace/esp32h2", "esp-hal-embassy/esp32h2", "esp-println/esp32h2", "esp-wifi/esp32h2", "esp-bootloader-esp-idf/esp32h2"]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'thin'
opt-level = 3
overflow-checks = false
